# HuffmanCompressor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: RELEASE_README.txt
scripts/: install.bat  install.sh
src/: Huffman.cpp  Huffman.h  Node.cpp  Node.h  main.cpp
